force-app/main/default/objects/Placement_Note__c/Placement_Note__c.object-meta.xml
<CustomObject>
    <label>Placement Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Placement Notes #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>