force-app/main/default/objects/Placement_Note__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Placement Notes</relationshipLabel>
    <relationshipName>Placement_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>