force-app/main/default/objects/Placement_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior Concern</fullName>
            </value>
            <value>
                <fullName>Medical Concern</fullName>
            </value>
            <value>
                <fullName>Other Notes</fullName>
            </value>
            <value>
                <fullName>Support Offered</fullName>
                <isActive>false</isActive>
                <label>Support Offered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>