force-app/main/default/objects/Placement_Note__c/fields/Placement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Placement_Notes__c</fullName>
    <label>Placement Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>